# k210-shared

./: Cargo.toml  README.md
src/: lib.rs  panic.rs
src/soc/: utils.rs
